[package]
name = "panoptes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "panoptes"
path = "src/main.rs"

[dependencies]
panoptes-core = { path = "../panoptes-core" }
panoptes-raster = { path = "../panoptes-raster" }
panoptes-vector = { path = "../panoptes-vector" }
panoptes-models = { path = "../panoptes-models" }
clap = { version = "4", features = ["derive"] }
ndarray = "0.17"
serde_json = "1"
rayon = "1"
