[package]
name = "panoptes-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["dep:ort"]

[dependencies]
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1"

[dev-dependencies]
approx = "0.5"
