[package]
name = "panoptes-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
panoptes-core = { path = "../panoptes-core" }
panoptes-raster = { path = "../panoptes-raster" }
panoptes-vector = { path = "../panoptes-vector" }
geo-types = "0.7"
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
