[package]
name = "panoptes-raster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
panoptes-core = { path = "../panoptes-core" }
image = "0.25"
tiff = "0.9"
ndarray = "0.16"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
