[package]
name = "panoptes-vector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
panoptes-core = { path = "../panoptes-core" }
geo = "0.29"
geo-types = "0.7"
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "0.24"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
